Resolved alignment issue

--- a/style.scss
+++ b/style.scss
@@ -34,9 +34,9 @@ header#branding { background:$lite7; @include linear-gradient($lite8, $lite6); @
   }
 }
 
-nav#site { position:absolute; top:13px; right:16px; z-index:1;
+nav#site { position:absolute; top:15px; right:16px; z-index:1;
   > * { float:left; overflow:hidden; background:$lite7; border-bottom:1px solid $lite8; @include box-shadow(0, -1px, 1px, $lite0); @include border-radius(8px); }
-  a { display:block; padding:0 12px; height:28px; line-height:28px; color:$lite8; font-weight:bold; text-shadow:0 0 3px $lite0, 0 1px 1px $lite0;
+  a { display:block; padding:0 12px; height:26px; line-height:26px; color:$lite8; font-weight:bold; text-shadow:0 0 3px $lite0, 0 1px 1px $lite0;
     &.active { color:$lite9; }
     &:hover { color:$lite9; }
   }
